--- a/chinslickingweb/home/static/css/main.css
+++ b/chinslickingweb/home/static/css/main.css
@@ -1123,7 +1123,7 @@ form.search-form button {
 }
 
 #menu ul > li:hover {
-    background-color: #fbdf51;
+    background-color: #99cc67;
 }
 
 #menu ul > li > a:hover {
@@ -1140,7 +1140,7 @@ form.search-form button {
 
 #menu ul ul {
     position: absolute;
-    background-color: #fff;
+    background-color: #fbdf50;
     left: 0;
     top: calc(100% + 0px);
     z-index: 2;
